# fastapi_test

./: pyproject.toml  requirements.txt
app/: app.py  settings.py
app/api/v1/: routes.py  test.py
app/core/: database.py
app/models/: test.py
app/schemas/: test.py  validators.py
